Complete overhaul to MC 1.21.10 and JDK 21